--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+l<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -435,7 +435,7 @@
   </section>
 
   <footer>
-    © <span id="year"></span> Proyecto de Movilidad — Fuente de datos: Open Data, Kaggle, Ayuntamiento de Barcelona, TMB y Bicing. | Desarrollado por <strong>David Cortés</strong>.
+    © <span id="year"></span> Proyecto de Movilidad — Fuente de datos: Open Data, Kaggle, Ayuntamiento de Barcelona, TMB y Bicing. | Desarrollado por <strong>David Cortés y Jaqueline Caballero</strong>.
   </footer>
 
   <script>
@@ -457,3 +457,4 @@
   </script>
 </body>
 </html>
+
