--- a/index.html
+++ b/index.html
@@ -342,12 +342,15 @@ l<!doctype html>
     </p>
 
     <div class="iframe-wrapper fade-in">
-      <iframe 
-        src="https://lookerstudio.google.com/embed/reporting/5d86781f-afb5-4ff3-b041-359be27fa355/page/p_a74xwp5fxd"
-        frameborder="0"
-        allowfullscreen
-        sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
-      </iframe>
+     <iframe 
+  width="100%" 
+  height="800" 
+  src="https://lookerstudio.google.com/embed/reporting/5d86781f-afb5-4ff3-b041-359be27fa355"
+  frameborder="0"
+  style="border:0;border-radius:10px;box-shadow:0 4px 18px rgba(0,0,0,0.08);"
+  allowfullscreen
+  sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
+</iframe>
     </div>
 
     <div class="grid" role="list" style="margin-top:3rem;">
@@ -457,4 +460,5 @@ l<!doctype html>
   </script>
 </body>
 </html>
+
 
