--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
       </article>
       <article class="card">
         <h3>🚴 Movilidad Sostenible</h3>
-        <p>El uso de bicicletas y caminatas ha aumentado un <strong>50 %</strong> desde 2020.</p>
+        <p>Caminar sigue siendo el modo de transporte más común en Barcelona, representando cerca del <strong>40 %</strong> de todos los desplazamientos diarios. 
+    Esta tendencia refleja un creciente interés por la movilidad activa y sostenible, apoyada por zonas peatonales y supermanzanas.</p>
       </article>
       <article class="card">
         <h3>🚗 Vehículo Privado</h3>
@@ -315,3 +316,4 @@
   </script>
 </body>
 </html>
+
